[metadata]
name = gpt
version = 0.2
url = https://github.com/metebalci/gpt
author = Mete Balci
author_email = metebalci@gmail.com
license = GPLv3
description = GPT utils
long_description = file: README.md
keywords = GPT
classifiers = 
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Information Technology
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Topic :: System :: Boot
  Topic :: System :: Filesystems
  Topic :: System :: Recovery Tools
  Topic :: System :: Systems Administration
  Topic :: Utilities

[options]
zip_safe = False
packages = gpt
include_package_data = True

[options.entry_points]
console_scripts = 
  print_mbr=gpt.scripts:print_mbr
  print_gpt_header=gpt.scripts:print_gpt_header
  print_gpt_partition_entry_array=gpt.scripts:print_gpt_partition_entry_array
